Fix homepage display on firefox

--- a/src/components/home/theater/TheaterContent.css
+++ b/src/components/home/theater/TheaterContent.css
@@ -21,7 +21,7 @@
 .sticker {
 	display: inline-block;
 	background-size: cover;
-	margin-bottom: -5px;
+	margin-bottom: -6px;
 }
 
 .main-sticker {
